# schnorr-musig-c

./: Cargo.toml  Makefile  README.md  cbindgen.toml  schnorr_musig.h
example-c/: main.c
src/: aggregate_pubkey.rs  decoder.rs  errors.rs  lib.rs  local.rs  signer.rs  verify.rs
