[package]
name = "musig-c"
version = "0.0.1"
authors = ["guanlong huang <gl041188@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
libc = "0.2"
musig = { package = "musig", git = "https://github.com/matter-labs/schnorr-musig", commit = "577b3cfa" }
bellman = { package = "bellman_ce", git = "https://github.com/matter-labs/bellman", branch = "plonk_release" }
franklin_crypto = { package = "franklin-crypto", git = "https://github.com/matter-labs/franklin-crypto.git", branch="constant_time"}
rand = "0.4.0"
